# buildroot_lvgl_package

./: CMakeLists.txt  lv_conf.h  lv_conf.h.in
